--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,15 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+node_modules/
+app.db/
+chaindata/
+genesis.json
+loom
+yarn.lock
+package-lock.json
+.idea/
+build/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
 
-# testing
-/coverage
+# If you want to versioning build files (and it is recommended) you should remove or comment the line below
+src/contracts
 
-# production
-/build
-
-# misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
