--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "commander": "^2.18.0",
     "ethereumjs-tx": "^1.3.7",
     "ethereumjs-wallet": "^0.6.2",
+    "fs": "^0.0.1-security",
     "loom-js": "1.38.0",
     "loom-truffle-provider": "^0.11.0",
     "openzeppelin-solidity": "^2.2.0",
